--- a/squadcast-helm/values.yaml
+++ b/squadcast-helm/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-namespace: {}
+namespace: testing-argocd-helm
 replicaCount: 1
 
 image:
