--- a/squadcast-helm/batman/staging-values.yaml
+++ b/squadcast-helm/batman/staging-values.yaml
@@ -23,7 +23,8 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
-podAnnotations: {}
+podAnnotations:
+  argocd-image-updater.argoproj.io/image-list: gcr.io/heptio-images/ks-guestbook-demo:^0.1
 
 podSecurityContext: {}
   # fsGroup: 2000
