--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -32,7 +32,8 @@ spec:
       http:
         paths:
           {{- range .paths }}
-          - path: {{ .path }}
+          - pathType: {{ .pathType }}
+            path: {{ .path }}
             backend:
               serviceName: {{ $fullName }}
               servicePort: {{ $svcPort }}
