--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -35,8 +35,9 @@ spec:
           - pathType: {{ .pathType }}
             path: {{ .path }}
             backend:
-              serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort }}
+              name: {{ $fullName }}
+              port: 
+                number: {{ $svcPort }}
           {{- end }}
     {{- end }}
   {{- end }}
