--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -35,9 +35,10 @@ spec:
           - pathType: {{ .pathType }}
             path: {{ .path }}
             backend:
-              name: {{ $fullName }}
-              port: 
-                number: {{ $svcPort }}
+              service:
+                name: {{ $fullName }}
+                port: 
+                  number: {{ $svcPort }}
           {{- end }}
     {{- end }}
   {{- end }}
