--- a/squadcast-helm/templates/service.yaml
+++ b/squadcast-helm/templates/service.yaml
@@ -3,7 +3,8 @@ kind: Service
 metadata:
   name: {{ include "squadcast-helm.fullname" . }}
   labels:
-    {{- include "squadcast-helm.labels" . | nindent 4 }}
+    # {{- include "squadcast-helm.labels" . | nindent 4 }} FIXME: Uncomment it
+    run: {{ include "squadcast-helm.fullname" . }} # FIXME: uncomment it {{- include "squadcast-helm.selectorLabels" . | nindent 8 }}    
 spec:
   type: {{ .Values.service.type }}
   ports:
