--- a/squadcast-helm/templates/deployment.yaml
+++ b/squadcast-helm/templates/deployment.yaml
@@ -10,7 +10,8 @@ spec:
   {{- end }}
   selector:
     matchLabels:
-      {{- include "squadcast-helm.selectorLabels" . | nindent 6 }}
+      run: {{ include "squadcast-helm.fullname" . }} 
+      # {{- include "squadcast-helm.selectorLabels" . | nindent 6 }}  #FIXME: Uncomment this
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -18,7 +19,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        run: {{ include "squadcast-helm.fullname" . }} # FIXME: uncomment it {{- include "squadcast-helm.selectorLabels" . | nindent 8 }}
+        {{- include "squadcast-helm.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
