--- a/squadcast-helm/templates/deployment.yaml
+++ b/squadcast-helm/templates/deployment.yaml
@@ -3,7 +3,8 @@ kind: Deployment
 metadata:
   name: {{ include "squadcast-helm.fullname" . }}
   labels:
-    {{- include "squadcast-helm.labels" . | nindent 4 }}
+    # {{- include "squadcast-helm.labels" . | nindent 4 }}
+    run: {{ include "squadcast-helm.fullname" . }} 
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
