--- a/squadcast-helm/templates/deployment.yaml
+++ b/squadcast-helm/templates/deployment.yaml
@@ -3,15 +3,14 @@ kind: Deployment
 metadata:
   name: {{ include "squadcast-helm.fullname" . }}
   labels:
-    # {{- include "squadcast-helm.labels" . | nindent 4 }}
-    run: {{ include "squadcast-helm.fullname" . }} 
+    run: {{ include "squadcast-helm.fullname" . }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
-  selector:
-    matchLabels:
-      run: {{ include "squadcast-helm.fullname" . }} 
+  # selector:
+  #   matchLabels:
+  #     run: {{ include "squadcast-helm.fullname" . }} 
       # {{- include "squadcast-helm.selectorLabels" . | nindent 6 }}  #FIXME: Uncomment this
   template:
     metadata:
