--- a/squadcast-helm/templates/deployment.yaml
+++ b/squadcast-helm/templates/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: {{ include "squadcast-helm.fullname" . }}
   labels:
-    run: {{ include "squadcast-helm.fullname" . }}
+    {{- include "squadcast-helm.selectorLabels" . | nindent 6 }}  #FIXME: Uncomment this
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
