--- a/squadcast-helm/templates/service.yaml
+++ b/squadcast-helm/templates/service.yaml
@@ -13,4 +13,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    run: {{ include "squadcast-helm.fullname" . }}
+    {{- include "squadcast-helm.selectorLabels" . | nindent 6 }}
