--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -44,7 +44,7 @@
 #   {{- end }}
 
 {{- if .Values.ingress.enabled -}}
-{{- $fullName := include "squadcast-helm.fullname" . -}}
+{{- $fullName := include "helm-infra.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
 {{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
   {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
@@ -62,7 +62,7 @@ kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-    {{- include "squadcast-helm.labels" . | nindent 4 }}
+    {{- include "helm-infra.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
