--- a/squadcast-helm/values.yaml
+++ b/squadcast-helm/values.yaml
@@ -76,6 +76,9 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
+initContainers:
+  enabled: false
+
 livenessProbe:
   enabled: false
 readinessProbe:
