--- a/customized-values.yaml
+++ b/customized-values.yaml
@@ -47,7 +47,7 @@ env:
     value: latest    
   # All non sensitive secrets can be passed here
   - name: VERSION
-    value: itsLatest        
+    value: itsLatest
 
 securityContext: {}
 
@@ -56,21 +56,30 @@ service:
   port: 80
 
 ingress:
-  enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  enabled: true
+  annotations: 
+    kubernetes.io/ingress.class: nginx
+    kubernetes.io/tls-acme: "true"
+    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
+    nginx.org/server-snippets: "gzip on;"
+    nginx.ingress.kubernetes.io/use-regex: "true"    
+    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
+    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST,
+           OPTIONS, DELETE, PATCH
+    nginx.ingress.kubernetes.io/enable-cors: "false"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"    
   hosts:
-    - host: chart-example.local
+    - host: apiiiiiii.squadcast.tech
       paths:
       - path: /
+        pathType: Prefix
         backend:
-          serviceName: chart-example.local
+          serviceName: "batman"
           servicePort: 80
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  tls:  
+   - secretName:  squadcast-prod-gateway-tls
+     hosts:
+       - apiiiiiii.squadcast.tech
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
