update yml files

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - gh-pages
 
 jobs:
   release:
@@ -15,7 +16,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        # use squadcast-helm as the charts directory
         with:
+          path: squadcast-helm
           fetch-depth: 0
 
       - name: Configure Git
@@ -30,7 +33,7 @@ jobs:
         uses: helm/chart-releaser-action@v1.5.0
         with:
           charts_dir: /squadcast-helm
-          charts-repo-url: https://squadcasthub.github.io/helm-infra/
+          charts-repo-url: https://squadcasthub.github.io/helm-infra/squadcast-helm
           config: cr.yaml
         env:
           CR_TOKEN: "${{ secrets.CR_TOKEN }}"
