feat: add index.yaml

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,6 +29,8 @@ jobs:
         uses: helm/chart-releaser-action@v1.5.0
         with:
           charts_dir: squadcast-helm
+          config: cr.yaml
+          charts_repo_url: https://squadcasthub.github.io/helm-infra
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           CR_SKIP_EXISTING: true
