--- a/cr.yaml
+++ b/cr.yaml
@@ -1,5 +1,7 @@
-# owner: SquadcastHub
-# git-repo: helm-infra
+owner: SquadcastHub
+git-repo: helm-infra
 # pages-branch: master
-# charts-dir: squadcast-helm
+charts-dir: squadcast-helm
 sign: false
+token: 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
+# index-path: /Users/muazam/Desktop/SquadcastHub/helm-infra
