--- a/cr.yaml
+++ b/cr.yaml
@@ -3,5 +3,6 @@ git-repo: helm-infra
 # pages-branch: master
 charts-dir: squadcast-helm
 sign: false
-# index-path: /Users/muazam/Desktop/SquadcastHub/helm-infra
 charts_repo_url: https://squadcasthub.github.io/helm-infra
+# use current directory as index-path
+index-path: .
