Merge: branch staging to gh-pages

--- a/squadcast-helm/templates/deployment.yaml
+++ b/squadcast-helm/templates/deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ include "squadcast-helm.fullname" . }}
   labels:
     {{- include "squadcast-helm.labels" . | nindent 4 }}
+  namespace: {{ .Values.namespace | default "default" | quote }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
@@ -20,10 +21,10 @@ spec:
       labels:
         {{- include "squadcast-helm.selectorLabels" . | nindent 8 }}
     spec:
-      {{- with .Values.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+      # {{- with .Values.imagePullSecrets }}
+      # imagePullSecrets:
+      #   {{- toYaml . | nindent 8 }}
+      # {{- end }}
       serviceAccountName: {{ include "squadcast-helm.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
@@ -38,7 +39,7 @@ spec:
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
-              protocol: TC
+              protocol: TCP
           {{- if .Values.livenessProbe.enabled }}
           livenessProbe:
             httpGet:
@@ -66,7 +67,6 @@ spec:
             name: config-volume
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-      {{- if .Values.initContainers.enabled}}
       initContainers:
         - name: aws-secret-fetcher
           image: amazon/aws-cli
@@ -79,7 +79,10 @@ spec:
             aws configure set aws_secret_access_key $AWS_SECRET_KEY
             aws configure set default.region us-east-1
             mkdir -p /config/
-            aws secretsmanager get-secret-value --secret-id $AWS_SECRET_MANAGER_ID --query SecretString --output text > /config/config.json
+            aws secretsmanager get-secret-value --secret-id common-secrets-staging --query SecretString --output text > /config/common-secrets.json
+            aws secretsmanager get-secret-value --secret-id common-config-staging --query SecretString --output text > /config/common-config.json
+            aws secretsmanager get-secret-value --secret-id $AWS_SECRET_MANAGER_ID --query SecretString --output text > /config/app-secret.json
+            echo $CONFIG > /config/app-config.json
           env:
             {{- toYaml .Values.env | nindent 12 }}
           resources: {}
@@ -88,7 +91,6 @@ spec:
           volumeMounts:
           - mountPath: /config
             name: config-volume
-      {{- end -}}
       volumes:
       - emptyDir: {}
         name: config-volume
