--- a/squadcast-helm/templates/hpa.yaml
+++ b/squadcast-helm/templates/hpa.yaml
@@ -5,6 +5,7 @@ metadata:
   name: {{ include "squadcast-helm.fullname" . }}
   labels:
     {{- include "squadcast-helm.labels" . | nindent 4 }}
+  namespace: {{ .Values.namespace | default "default" | quote }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
