--- a/squadcast-helm/templates/service.yaml
+++ b/squadcast-helm/templates/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ include "squadcast-helm.fullname" . }}
   labels:
     {{- include "squadcast-helm.labels" . | nindent 4 }}
-    # run: {{ include "squadcast-helm.fullname" . }} # FIXME: uncomment it {{- include "squadcast-helm.selectorLabels" . | nindent 8 }}    
+  namespace: {{ .Values.namespace | default "default" | quote }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -13,4 +13,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "squadcast-helm.selectorLabels" . | nindent 6 }}
+    {{- include "squadcast-helm.selectorLabels" . | nindent 4 }}
