--- a/squadcast-helm/templates/serviceaccount.yaml
+++ b/squadcast-helm/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "squadcast-helm.serviceAccountName" . }}
+  namespace: {{ .Values.namespace | default "default" | quote }}
   labels:
     {{- include "squadcast-helm.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
