--- a/squadcast-helm/templates/namespace.yaml
+++ b/squadcast-helm/templates/namespace.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: {{ .Values.namespace | default "default" | quote }}
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: {{ .Values.namespace }}
