--- a/squadcast-helm/templates/service.yaml
+++ b/squadcast-helm/templates/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ include "squadcast-helm.fullname" . }}
   labels:
     {{- include "squadcast-helm.labels" . | nindent 4 }}
-  namespace: {{ .Values.namespace | default "default" | quote }}
+  # namespace: {{ .Values.namespace }}
 spec:
   type: {{ .Values.service.type }}
   ports:
