--- a/squadcast-helm/templates/service.yaml
+++ b/squadcast-helm/templates/service.yaml
@@ -4,6 +4,8 @@ metadata:
   name: {{ include "squadcast-helm.fullname" . }}
   labels:
     {{- include "squadcast-helm.labels" . | nindent 4 }}
+  annotations:
+    {{- include "squadcast-helm.annotations" . | nindent 4 }}
   # namespace: {{ .Values.namespace }}
 spec:
   type: {{ .Values.service.type }}
