--- a/squadcast-helm/templates/service.yaml
+++ b/squadcast-helm/templates/service.yaml
@@ -6,7 +6,7 @@ metadata:
     {{- include "squadcast-helm.labels" . | nindent 4 }}
   annotations:
     {{- include "squadcast-helm.annotations" . | nindent 4 }}
-  # namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.namespace }}
 spec:
   type: {{ .Values.service.type }}
   ports:
