--- a/squadcast-helm/values.yaml
+++ b/squadcast-helm/values.yaml
@@ -14,6 +14,7 @@ image:
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
+containerNameOverride: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
