fix: added default value for overrideContainerStartCommand

--- a/squadcast-helm/values.yaml
+++ b/squadcast-helm/values.yaml
@@ -16,6 +16,9 @@ nameOverride: ""
 fullnameOverride: ""
 containerNameOverride: ""
 
+overrideContainerStartCommand:
+  enabled: false
+
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
