--- a/squadcast-helm/templates/deployment.yaml
+++ b/squadcast-helm/templates/deployment.yaml
@@ -85,8 +85,8 @@ spec:
             aws configure set aws_secret_access_key $AWS_SECRET_KEY
             aws configure set default.region us-east-1
             mkdir -p /config/
-            aws secretsmanager get-secret-value --secret-id common-secrets-staging --query SecretString --output text > /config/common-secrets.json
-            aws secretsmanager get-secret-value --secret-id common-config-staging --query SecretString --output text > /config/common-config.json
+            aws secretsmanager get-secret-value --secret-id common-secrets-$AWS_SECRET_MANAGER_ENV --query SecretString --output text > /config/common-secrets.json
+            aws secretsmanager get-secret-value --secret-id common-config-$AWS_SECRET_MANAGER_ENV --query SecretString --output text > /config/common-config.json
             aws secretsmanager get-secret-value --secret-id $AWS_SECRET_MANAGER_ID --query SecretString --output text > /config/app-secret.json
             echo $CONFIG > /config/app-config.json
           env:
