--- a/squadcast-helm/templates/service.yaml
+++ b/squadcast-helm/templates/service.yaml
@@ -11,8 +11,8 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: 80
       protocol: TCP
-      name: http
+      name: web
   selector:
     {{- include "squadcast-helm.selectorLabels" . | nindent 4 }}
