fix: update gh actions

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,10 +1,9 @@
-name: Release Charts
+name: Squadcast Helm Chart Release
 
 on:
   push:
     branches:
       - master
-      - gh-pages
 
 jobs:
   release:
