feat: add restartPolicy

--- a/squadcast-helm/templates/deployment.yaml
+++ b/squadcast-helm/templates/deployment.yaml
@@ -26,6 +26,7 @@ spec:
       serviceAccountName: {{ include "squadcast-helm.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      restartPolicy: {{ .Values.restartPolicy | default "Always" }}      
       containers:
         - name: {{ include "squadcast-helm.containerName" . }}
           securityContext:
