add new migration job

--- a/squadcast-helm/values.yaml
+++ b/squadcast-helm/values.yaml
@@ -92,3 +92,7 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+# migration_job:
+#   command: [ "/bin/sh" ]
+#   args: [ "-c", "/app/batman search-worker /config/*.json" ]
