added support for additional ports in deployment.yaml

--- a/squadcast-helm/templates/deployment.yaml
+++ b/squadcast-helm/templates/deployment.yaml
@@ -45,6 +45,16 @@ spec:
             - name: web
               containerPort: {{ .Values.service.port }}
               protocol: TCP
+            {{- if .Values.service.extraPorts }}
+            {{- range $servicePort := .Values.service.extraPorts }}
+                - name: {{ $servicePort.name }}
+                  containerPort: {{ $servicePort.targetPort }}
+                  {{- if $servicePort.protocol }}
+                  protocol: {{ $servicePort.protocol }} 
+                  {{- end }}
+            {{- end }}
+            {{- end }}
+
           {{- if .Values.livenessProbe.enabled }}
           livenessProbe:
             httpGet:
