--- a/squadcast-helm/templates/deployment.yaml
+++ b/squadcast-helm/templates/deployment.yaml
@@ -45,8 +45,8 @@ spec:
             - name: web
               containerPort: {{ .Values.service.port }}
               protocol: TCP
-            {{- if .Values.service.extraPorts }}
-            {{- range $servicePort := .Values.service.extraPorts }}
+            {{- if .Values.service.additionalPorts }}
+            {{- range $servicePort := .Values.service.additionalPorts }}
                 - name: {{ $servicePort.name }}
                   containerPort: {{ $servicePort.targetPort }}
                   {{- if $servicePort.protocol }}
