--- a/cr.yaml
+++ b/cr.yaml
@@ -1,8 +1,8 @@
-owner: SquadcastHub
+owner: harshv1995
 git-repo: helm-infra
 pages-branch: master
 charts-dir: squadcast-helm
 sign: false
-charts_repo_url: https://squadcasthub.github.io/helm-infra
+charts_repo_url: https://harshv1995.github.io/helm-infra
 index-path: .
-version: 0.2.1
+version: 0.2.2
